# Event

./: README.md
backend/: model.pkl  pyproject.toml
backend/event_api/: event_dataset.xlsx  ml_model.py  model.pkl  models.py  serializers.py  train_model.py  urls.py  views.py
backend/event_api/migrations/: 0001_initial.py
backend/event_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
frontend/src/components/: EditEvent.css  EditEvent.js  EventForm.css  EventForm.js  EventList.css  EventList.js
